*SVN*

* Make sure with_scope takes both :select and :joins into account when setting :readonly.  Allows you to save records you retrieve using method_missing on a has_many :through associations.  [Koz]

* Allow a polymorphic :source for has_many :through associations.  Closes #7143 [protocool]

* Consistent public/protected/private visibility for chained methods.  #7813 [Dan Manges]

* Oracle: fix quoted primary keys and datetime overflow.  #7798 [Michael Schoen]

* Consistently quote primary key column names.  #7763 [toolmantim]

* Fixtures: fix YAML ordered map support.  #2665 [Manuel Holtgrewe, nfbuckley]

* DateTimes assume the default timezone.  #7764 [Geoff Buesing]

* Sybase: hide timestamp columns since they're inherently read-only.  #7716 [Mike Joyce]

* Oracle: overflow Time to DateTime.  #7718 [Michael Schoen]

* PostgreSQL: don't use async_exec and async_query with postgres-pr.  #7727, #7762 [flowdelic, toolmantim]

* Fix has_many :through << with custom foreign keys.  #6466, #7153 [naffis, Rich Collins]

* Test DateTime native type in migrations, including an edge case with dates
during calendar reform.  #7649, #7724 [fedot, Geoff Buesing]

* SQLServer: correctly schema-dump tables with no indexes or descending indexes.  #7333, #7703 [Jakob S, Tom Ward]

* SQLServer: recognize real column type as Ruby float.  #7057 [sethladd, Tom Ward]

* Added fixtures :all as a way of loading all fixtures in the fixture directory at once #7214 [manfred]

* Added database connection as a yield parameter to ActiveRecord::Base.transaction so you can manually rollback [DHH]. Example:

    transaction do |transaction|
      david.withdrawal(100)
      mary.deposit(100)
      transaction.rollback! # rolls back the transaction that was otherwise going to be successful
    end

* Made increment_counter/decrement_counter play nicely with optimistic locking, and added a more general update_counters method [Jamis Buck]
